# PlayCua

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ADR.md  AGENTS.md  CHANGELOG.md  CHARTER.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  DEPRECATED_BARE_CUA.md  FUNCTIONAL_REQUIREMENTS.md  PLAN.md  PRD.md  README.md  SECURITY.md  SPEC.md  SSOT.md  STATUS.md  Taskfile.yml  _typos.toml  audit_scorecard.json  cliff.toml  clippy.toml  codecov.yml  deny.toml  full_forward_dag.txt  gitleaks.toml  justfile  lefthook.yml  llms.txt  merge_plan.md  reorg-marker.json  rust-toolchain.toml  rustfmt.toml  tarpaulin.toml  worklog-L1-002-2026-06-11-canonical.json  worklog-L1-007-2026-06-11-canonical.json  (+14 more)
.agileplus/: worklog.md
.audit/: audit-2026-06-14.md  workspace-fix.md
.cargo/: config.toml
.github/: CODEOWNERS  FUNDING.yml  SECURITY.md  dependabot.yml
.github/workflows/: audit.yml  cargo-audit.yml  cargo-deny.yml  cargo-machete.yml  cargo-semver-checks.yml  ci.yml  codeql-rust.yml  codeql.yml  deny.yml  doc-links.yml  fr-coverage.yml  governance.yml  hermetic-spawn.yml  legacy-tooling-gate.yml  pre-commit.yml  quality-gate.yml  sast.yml  scorecard.yml  secret-scan.yml  security-deep-scan.yml  security.yml  trufflehog.yml
.kittify/: AGENTS.md  config.yaml
.kittify/memory/: constitution.md
bindings/csharp/: BareCua.cs  PlayCua.cs
contracts/: openrpc.json
crates/cli-wrapper/: Cargo.toml
crates/cli-wrapper/src/: lib.rs
crates/integration/: Cargo.toml
crates/integration/src/: lib.rs
crates/pheno-errors/: Cargo.toml
crates/pheno-errors/src/: lib.rs
crates/pheno-flags/: Cargo.toml
crates/pheno-flags/src/: lib.rs
crates/pheno-tracing/: Cargo.toml
crates/pheno-tracing/src/: lib.rs
crates/playcua-app/: Cargo.toml
crates/playcua-app/src/: lib.rs  main.rs
crates/playcua-bare/: Cargo.toml  README.md  playcua-bare.cdx.json
crates/playcua-bare/src/: lib.rs
crates/port-input/: Cargo.toml
crates/port-input/src/: lib.rs
crates/port-input/tests/: input_test.rs
crates/port-renderer/: Cargo.toml
crates/port-renderer/src/: lib.rs
crates/port-renderer/tests/: renderer_test.rs
crates/port-window-mgr/: Cargo.toml
crates/port-window-mgr/src/: lib.rs
crates/port-window-mgr/tests/: window_mgr_test.rs
docs/: FUNCTIONAL_REQUIREMENTS.md  index.md  skill-sdk.md
docs/adr/: 001-hexagonal-architecture.md  002-platform-adapter-selection.md  003-plugin-system.md  004-zero-cost-async-traits.md  ADR-006-modality-abstraction.md  ADR-007-wine-bridge-research.md  ADR-008-mcp-and-cli-surfaces.md
docs/audit/: COMPUTERUSE_DEDUP.md  QUALITY.md
docs/boundary/: PlayCua.md
docs/guides/: hermetic-spawn.md  sandbox-jsonrpc-bridge.md
docs/intent/: PlayCua.md
docs/journeys/: index.md  quick-start.md
docs/research/: SOTA-2026.md
docs/sessions/20260429-bare-cua-sladge-badge/: 00_SESSION_OVERVIEW.md  01_RESEARCH.md  02_SPECIFICATIONS.md  03_DAG_WBS.md  04_IMPLEMENTATION_STRATEGY.md  05_KNOWN_ISSUES.md
docs/sessions/20260429-playcua-sladge-badge/: 00_SESSION_OVERVIEW.md  01_RESEARCH.md  02_SPECIFICATIONS.md  03_DAG_WBS.md  04_IMPLEMENTATION_STRATEGY.md  05_KNOWN_ISSUES.md
docs/specs/: FR.md  TRACEABILITY.md
docs/stories/: hello-world.md  index.md
docs/traceability/: index.md
docs/worklogs/: README.md
native/: Cargo.toml
native/examples/: echo_plugin.rs
native/src/: lib.rs  main.rs  mcp_server.rs  socket.rs
native/src/adapters/: analysis_adapter.rs  enigo.rs  input_capture.rs  mod.rs  process_adapter.rs  renderer.rs  sandbox.rs  sandbox_bridge.rs  tokio.rs  xcap.rs
native/src/adapters/linux/: ewmh.rs  mod.rs  uinput.rs  x11.rs  x11capture.rs
native/src/adapters/macos/: cgcapture.rs  cgevent.rs  mod.rs  nsworkspace.rs
native/src/adapters/windows/: enumwin.rs  mod.rs  sendinput.rs  wgc.rs
native/src/analysis/: mod.rs
native/src/app/: mod.rs
native/src/domain/: analysis.rs  capture.rs  input.rs  input_capture.rs  mod.rs  process.rs  render.rs  sandbox.rs  window.rs
native/src/input/: linux.rs  macos.rs  mod.rs  windows.rs
native/src/ipc/: bridge_client.rs  bridge_server.rs  dispatcher.rs  mod.rs  mod_types.rs
native/src/modality/: container.rs  dispatch.rs  mod.rs  native.rs  nvms.rs  registry.rs  sandbox.rs  wsl.rs
native/src/plugins/: mod.rs
native/src/ports/: input.rs  mod.rs  renderer.rs  sandbox.rs
native/src/process/: mod.rs
native/src/window/: linux.rs  macos.rs  mod.rs  windows.rs
native/tests/: hermetic_sandbox_bridge.rs  hermetic_sandbox_driver.rs  hexagonal_boundary.rs  integration_screenshot_api.rs  integration_smoke.rs  playcua_bridge_bin.rs
native/tests/fixtures/: fake-nvms.cmd  fake-nvms.sh  fake-playcua-bridge.py  fake-playcua-bridge.sh  fake-sandbox.sh
native/tests/unit/: analysis_tests.rs
python/: pyproject.toml
python/bare_cua/: agent.py  computer.py
python/laycua/: __init__.py  agent.py  computer.py
python/laycua/sandbox/: __init__.py  config.py  game_sandbox.py  pool.py  sandbox.py  sandboxfile.py  steamless_helper.py
python/laycua/sandbox/templates/: setup_bepinex.ps1
python/playcua/: __init__.py  agent.py  computer.py
python/tests/: test_computer.py  test_sandbox.py
sandbox/: __init__.py  sandbox.py  sandboxfile.py
sandbox/templates/: install_dino.ps1  setup_bepinex.ps1
scripts/: coverage.sh  migrate-make-to-task.sh
tests/: analysis_hash_test.rs  input_dispatch_test.rs  modality_ping_test.rs  process_lifecycle_test.rs  screenshot_test.rs  type_strictness_test.rs
worklogs/: l4-73-playcua-cli-wrap-2026-06-11.json  l5-81-playcua-integration-2026-06-11.json
