[workspace]
members = ["native"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["bare-cua contributors"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
base64 = "0.22"
image = { version = "=0.25.10", default-features = false, features = ["png", "jpeg"] }
blake3 = "=1.8.5"
fast_image_resize = "4"
enigo = { version = "0.6", features = [] }
xcap = "0.9"

