[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bare-cua"
version = "0.1.0"
description = "CUA fork - bare metal computer-use agent without VM layer"
readme = "../../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "bare-cua contributors" }]
keywords = ["computer-use", "automation", "agent", "cua"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "anthropic>=0.40.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
litellm = ["litellm>=1.0.0"]
openai = ["openai>=1.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/KooshaPari/bare-cua"
Repository = "https://github.com/KooshaPari/bare-cua"

[tool.hatch.build.targets.wheel]
packages = ["bare_cua"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
