[package]
name = "pheno-tracing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Canonical tracing subscriber for PlayCua (and the rest of the pheno-* fleet). L5 #81 wiring."

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true